Fix the outline chapter alignment issue and support drag-to-resize width.

--- a/vditor/src/assets/less/_reset.less
+++ b/vditor/src/assets/less/_reset.less
@@ -534,11 +534,13 @@
   }
 
   &-outline {
+    position: relative;
+    flex-shrink: 0;
     width: 240px;
     border-right: 1px solid var(--border-color);
     background-color: var(--panel-background-color);
     display: none;
-    overflow: auto;
+    overflow: hidden;
 
     @media (max-width: 1450px) {
       width: 210px;
@@ -555,10 +557,50 @@
     &--right {
       border-right: 0;
       border-left: 1px solid var(--border-color);
+
+      .vditor-outline__resize {
+        right: auto;
+        left: -2px;
+      }
+    }
+
+    &--resizing,
+    &--resizing * {
+      cursor: col-resize !important;
+      user-select: none !important;
+    }
+
+    &__resize {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: -2px;
+      width: 4px;
+      z-index: 2;
+      cursor: col-resize;
+
+      &:hover,
+      .vditor-outline--resizing & {
+        background-color: var(--toolbar-icon-hover-color);
+        opacity: 0.45;
+      }
     }
 
     &::-webkit-scrollbar {
       display: none;
+    }
+
+    &__content {
+      overflow: auto;
+      height: 100%;
+
+      & > ul {
+        padding-left: 0;
+      }
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     ul {
@@ -567,20 +609,19 @@
       margin: 0;
     }
 
-    &__content > ul {
-      padding-left: 0;
-    }
-
     li > span {
       display: flex;
       align-items: center;
+      min-width: 0;
       padding: 5px 10px;
       cursor: pointer;
       color: var(--textarea-text-color);
 
       & > svg {
+        flex-shrink: 0;
         height: 10px;
         width: 10px;
+        margin-right: 5px;
       }
 
       &:hover {
@@ -588,6 +629,8 @@
       }
 
       & > span {
+        flex: 1;
+        min-width: 0;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -604,7 +647,6 @@
     &__action {
       transition: @transition;
       fill: currentColor;
-      margin-right: 5px;
       flex-shrink: 0;
 
       &--close {
